# physics

./: CMakeLists.txt  a.out  complex.hpp  dimensions.hpp  enviroment.hpp  error.txt  gravity_motion.hpp  main.cpp  num_range.hpp  physics_constants.hpp  physics_unit.hpp  point.hpp  run.py  spawns.hpp  triangle.hpp  vec_quantity.hpp
dependencies/: CMakeLists.txt
dependencies/core/: CMakeLists.txt
dependencies/core/include/core/: base.h
dependencies/core/src/: base.cpp
dependencies/debugutils/: CMakeLists.txt
dependencies/debugutils/include/debugutils/: debug.h
dependencies/debugutils/src/: debug.cpp
include/operations/: product.hpp
include/quantities/: angle.hpp  constants.hpp  force.hpp  point.hpp  scalar_quantity.cpp  scalar_quantity.hpp  triple.hpp  unit.hpp  vec_quantity.hpp
src/quantities/: angle.cpp  point.cpp  triple.cpp  unit.cpp  vec_quantity.cpp
